--- a/custom_components/aladdin_connect/manifest.json
+++ b/custom_components/aladdin_connect/manifest.json
@@ -5,6 +5,7 @@
   "config_flow": true,
   "dependencies": ["application_credentials"],
   "documentation": "https://www.home-assistant.io/integrations/aladdin_connect",
+  "issue_tracker": "https://github.com/lllucius/aladdin_connect/issues",
   "iot_class": "cloud_polling",
   "requirements": ["genie-partner-sdk==1.0.2"],
   "version": "2024.6.4"
